--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7499,36 +7499,60 @@ footer {
   margin-bottom: 3rem;
 }
 
-.knowledge-sec2_video-formGroup form {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  position: relative;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 200px;
-  margin-top: 1.5rem;
+.knowledge-sec2_video-buttonGroup {
   margin-bottom: 1.5rem;
 }
 
-.knowledge-sec2_video-formGroup form input {
-  outline: 0;
-  margin: 0;
-  line-height: 1.65rem;
-  height: 1.65rem;
-  border: 0.125rem solid #a0a1a5;
+.knowledge-sec2_video-buttonGroup button {
+  background-color: #dad9d9;
+  border: 0.0625rem solid #dad9d9;
+  padding: 0.25rem 3rem;
 }
 
-.knowledge-sec2_video-formGroup form button {
-  background-color: #a0a1a5;
-  background-image: url(../../images/icon/search.svg);
-  background-size: 60%;
-  background-position: center;
-  background-repeat: no-repeat;
-  border: 0;
-  width: 2rem;
-  height: 2rem;
+.knowledge-sec2_video-buttonGroup button span {
+  font-weight: bolder;
+  font-size: 0.9375rem;
+  pointer-events: none;
+}
+
+.knowledge-sec2_video-buttonGroup button i.close {
+  display: block;
+  width: 2.5rem;
+  height: 2.5rem;
+  position: relative;
+  cursor: pointer;
+  pointer-events: none;
+}
+
+.knowledge-sec2_video-buttonGroup button i.close::before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 1.25rem;
+  height: 0.125rem;
+  background-color: #000;
+  -webkit-transform: translate(-50%, -50%) rotate(-45deg);
+          transform: translate(-50%, -50%) rotate(-45deg);
+  pointer-events: none;
+}
+
+.knowledge-sec2_video-buttonGroup button i.close::after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 1.25rem;
+  height: 0.125rem;
+  background-color: #000;
+  -webkit-transform: translate(-50%, -50%) rotate(45deg);
+          transform: translate(-50%, -50%) rotate(45deg);
+  pointer-events: none;
+}
+
+.knowledge-sec2_video-buttonGroup button:hover {
+  background-color: #92a9c9;
+  border: 0.0625rem solid #92a9c9;
 }
 
 .knowledge-sec2_video-row {
@@ -7588,7 +7612,6 @@ footer {
   width: 100%;
   padding-left: 0.25rem;
   padding-right: 0.25rem;
-  height: 30rem;
 }
 
 .knowledge-sec2_video-row-col-figure button::after, .knowledge-sec2_video-row-col-figure a::after {
@@ -7605,17 +7628,39 @@ footer {
   background-color: rgba(0, 0, 0, 0);
 }
 
+.knowledge-sec2_video-row-col-figure.list {
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
+  max-width: 50%;
+}
+
 .knowledge-sec2_video-row-col-figure figure {
   -webkit-box-shadow: 0 0.125rem 0.125rem 0.125rem rgba(0, 0, 0, 0.15);
           box-shadow: 0 0.125rem 0.125rem 0.125rem rgba(0, 0, 0, 0.15);
   overflow: hidden;
   -webkit-transition: all 0.2s;
   transition: all 0.2s;
+  margin-bottom: 0.75rem;
 }
 
 .knowledge-sec2_video-row-col-figure figure .img {
+  position: relative;
+}
+
+.knowledge-sec2_video-row-col-figure figure .img.video::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-image: url(../../images/icon/play.png);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.knowledge-sec2_video-row-col-figure figure img {
   width: 100%;
-  height: 20rem;
   background-size: cover;
   margin-bottom: 0.25rem;
   background-size: cover;
@@ -7668,6 +7713,210 @@ footer {
 
 .knowledge-sec2_video-row-col-figure figure:hover p {
   color: #fff;
+}
+
+#popup.popup-document {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 1001;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+
+#popup .popup-body {
+  border-radius: 1rem;
+  background-color: #fff;
+  padding: 1rem;
+  margin: 1rem;
+  -webkit-transform: translate(0, -25%);
+          transform: translate(0, -25%);
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+
+#popup .popup-header {
+  margin-left: 1rem;
+  margin-right: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  border-bottom: solid #A2A2A2 1px;
+}
+
+#popup .popup-header h1, #popup .popup-header h2, #popup .popup-header h3, #popup .popup-header h4, #popup .popup-header h5, #popup .popup-header h6 {
+  padding: 0.75rem 0;
+  margin: 0;
+  font-size: 1.125rem;
+  color: #333;
+  font-weight: bolder;
+}
+
+#popup .popup-header button {
+  margin-left: 3rem;
+  border: 0;
+  background-color: transparent;
+}
+
+#popup .popup-main {
+  overflow: auto;
+  padding: 0 15px;
+  max-height: 80vh;
+  max-width: 60vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+#popup .popup-main button {
+  background-color: #dad9d9;
+  border: 0.0625rem solid #dad9d9;
+  padding: 0.25rem 1.5rem;
+  margin: 0.5rem 0.25rem;
+}
+
+#popup .popup-main button span {
+  font-weight: bolder;
+  font-size: 0.9375rem;
+  pointer-events: none;
+}
+
+#popup .popup-main button i.close {
+  display: block;
+  width: 2.5rem;
+  height: 2.5rem;
+  position: relative;
+  cursor: pointer;
+  pointer-events: none;
+}
+
+#popup .popup-main button i.close::before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 1.25rem;
+  height: 0.125rem;
+  background-color: #000;
+  -webkit-transform: translate(-50%, -50%) rotate(-45deg);
+          transform: translate(-50%, -50%) rotate(-45deg);
+  pointer-events: none;
+}
+
+#popup .popup-main button i.close::after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 1.25rem;
+  height: 0.125rem;
+  background-color: #000;
+  -webkit-transform: translate(-50%, -50%) rotate(45deg);
+          transform: translate(-50%, -50%) rotate(45deg);
+  pointer-events: none;
+}
+
+#popup .popup-main button:hover {
+  background-color: #92a9c9;
+  border: 0.0625rem solid #92a9c9;
+}
+
+#popup .popup-footer {
+  margin-left: 1rem;
+  margin-right: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+#popup .popup-footer button {
+  margin: 15px 0;
+  border-radius: 2rem;
+  min-width: 4.5rem;
+  border: 2px solid transparent;
+  font-size: 0.875rem;
+  line-height: 1.125rem;
+  height: 1.125rem;
+  padding: 0 1.5rem;
+}
+
+#popup.popup-hide {
+  opacity: 0;
+  pointer-events: none;
+}
+
+#popup.popup-hide > div {
+  -webkit-transform: translate(0, -50%);
+          transform: translate(0, -50%);
+}
+
+#popup.popup-show {
+  opacity: 1;
+  pointer-events: auto;
+}
+
+#popup.popup-show > div {
+  -webkit-transform: translate(0, 0);
+          transform: translate(0, 0);
+}
+
+#popup i.close {
+  display: block;
+  width: 2.5rem;
+  height: 2.5rem;
+  position: relative;
+  cursor: pointer;
+  pointer-events: none;
+}
+
+#popup i.close::before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 1.25rem;
+  height: 0.125rem;
+  background-color: #000;
+  -webkit-transform: translate(-50%, -50%) rotate(-45deg);
+          transform: translate(-50%, -50%) rotate(-45deg);
+  pointer-events: none;
+}
+
+#popup i.close::after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 1.25rem;
+  height: 0.125rem;
+  background-color: #000;
+  -webkit-transform: translate(-50%, -50%) rotate(45deg);
+          transform: translate(-50%, -50%) rotate(45deg);
+  pointer-events: none;
 }
 
 #banner-design {
@@ -8217,7 +8466,6 @@ footer {
 }
 
 .design-sec2_video-row-col-figure {
-  height: 33rem;
   position: relative;
   padding: 0.5rem;
   width: 100%;
@@ -8260,17 +8508,32 @@ footer {
 }
 
 .design-sec2_video-row-col-figure figure .img {
+  position: relative;
+}
+
+.design-sec2_video-row-col-figure figure .img.video::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-image: url(../../images/icon/play.png);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.design-sec2_video-row-col-figure figure img {
   -ms-flex-negative: 0;
       flex-shrink: 0;
   width: 100%;
   background-size: cover;
-  height: 25rem;
-  margin-bottom: 0.375rem;
+  margin-bottom: 0.75rem;
   background-size: cover;
   background-position: center;
 }
 
-.design-sec2_video-row-col-figure figure .img.list {
+.design-sec2_video-row-col-figure figure img.list {
   height: 11.25rem;
 }
 
@@ -8310,8 +8573,8 @@ footer {
           justify-content: center;
   padding-left: 1.5rem;
   padding-right: 1.5rem;
-  margin-top: 0.375rem;
-  margin-bottom: 0.75rem;
+  margin-top: 0.75rem;
+  margin-bottom: 1.5rem;
 }
 
 .design-sec2_video-row-col-figure figure p a {
@@ -8803,36 +9066,37 @@ footer {
   margin-bottom: 3rem;
 }
 
-.innovation-sec2_video-formGroup form {
+.innovation-sec2_video-buttonGroup {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  position: relative;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 200px;
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
 }
 
-.innovation-sec2_video-formGroup form input {
-  outline: 0;
-  margin: 0;
-  line-height: 1.65rem;
-  height: 1.65rem;
-  border: 0.125rem solid #a0a1a5;
-}
-
-.innovation-sec2_video-formGroup form button {
-  background-color: #a0a1a5;
-  background-image: url(../../images/icon/search.svg);
-  background-size: 60%;
-  background-position: center;
-  background-repeat: no-repeat;
-  border: 0;
-  width: 2rem;
+.innovation-sec2_video-buttonGroup button {
+  background-color: #dad9d9;
   height: 2rem;
+  padding: 0;
+  margin: 0;
+  border: 0.0625rem solid #fff;
+  max-width: 8.333%;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 8.333%;
+          flex: 0 0 8.333%;
+}
+
+.innovation-sec2_video-buttonGroup button.active {
+  background-color: #92a9c9;
+}
+
+.innovation-sec2_video-buttonGroup button:hover {
+  background-color: #92a9c9;
+}
+
+.innovation-sec2_video-buttonGroup button span {
+  pointer-events: none;
+  font-size: 0.9375rem;
+  color: #fff;
+  line-height: 2rem;
 }
 
 .innovation-sec2_video-row {
@@ -8900,7 +9164,6 @@ footer {
 }
 
 .innovation-sec2_video-row-col-figure {
-  height: 32rem;
   position: relative;
   padding: 0.5rem;
   width: 100%;
@@ -8937,11 +9200,26 @@ footer {
 }
 
 .innovation-sec2_video-row-col-figure figure .img {
+  position: relative;
+}
+
+.innovation-sec2_video-row-col-figure figure .img.video::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-image: url(../../images/icon/play.png);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.innovation-sec2_video-row-col-figure figure img {
   -ms-flex-negative: 0;
       flex-shrink: 0;
   width: 100%;
   background-size: cover;
-  height: 21rem;
   margin-bottom: 0.375rem;
   background-size: cover;
   background-position: center;
@@ -9775,11 +10053,26 @@ footer {
 }
 
 .detail-article-container-row-col-figure figure .img {
+  position: relative;
+}
+
+.detail-article-container-row-col-figure figure .img.video::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-image: url(../../images/icon/play.png);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.detail-article-container-row-col-figure figure img {
   -ms-flex-negative: 0;
       flex-shrink: 0;
   width: 100%;
   background-size: cover;
-  height: 10rem;
   margin-bottom: 0.375rem;
   background-size: cover;
   background-position: center;
