--- a/src/scss/page/_design.scss
+++ b/src/scss/page/_design.scss
@@ -239,7 +239,7 @@
                     @include px(0.5rem);
                     @include my(0.5rem);
                     &#{-figure}{
-                        height: 33rem;
+                        //height: 33rem;
                         @include stretched-link;
                         &.list{
                             width: 50%;
@@ -256,11 +256,27 @@
                             height: 100%;
                             width: 100%;
                             .img{
+                                position: relative;
+                                &.video{
+                                    &::before{
+                                        content: '';
+                                        position: absolute;
+                                        top: 0;
+                                        left: 0;
+                                        right: 0;
+                                        bottom: 0;
+                                        background-image: url(../../images/icon/play.png);
+                                        background-repeat: no-repeat;
+                                        background-position: center;
+                                    }
+                                }
+                            }
+                            img{
                                 flex-shrink: 0;
                                 width: 100%;
                                 background-size: cover;
-                                height: 25rem;
-                                margin-bottom: 0.375rem;
+                                //height: 25rem;
+                                margin-bottom: 0.75rem;
                                 background-size: cover;
                                 background-position: center;
                                 &.list{
@@ -283,8 +299,8 @@
                                 align-items: center;
                                 justify-content: center;
                                 @include px(1.5rem);
-                                margin-top: 0.375rem;
-                                margin-bottom: 0.75rem;
+                                margin-top: 0.75rem;
+                                margin-bottom: 1.5rem;
 
                                 a{
                                     color: #505050;
