--- a/src/scss/page/_detail.scss
+++ b/src/scss/page/_detail.scss
@@ -60,10 +60,26 @@
                             height: 100%;
                             width: 100%;
                             .img{
+                                position: relative;
+                                &.video{
+                                    &::before{
+                                        content: '';
+                                        position: absolute;
+                                        top: 0;
+                                        left: 0;
+                                        right: 0;
+                                        bottom: 0;
+                                        background-image: url(../../images/icon/play.png);
+                                        background-repeat: no-repeat;
+                                        background-position: center;
+                                    }
+                                }
+                            }
+                            img{
                                 flex-shrink: 0;
                                 width: 100%;
                                 background-size: cover;
-                                height: 10rem;
+                                //height: 10rem;
                                 margin-bottom: 0.375rem;
                                 background-size: cover;
                                 background-position: center;
