--- a/src/scss/page/_innovation.scss
+++ b/src/scss/page/_innovation.scss
@@ -1,20 +1,42 @@
-#banner-innovation{
+#banner-innovation {
     margin-bottom: 0;
-    .silck-item{
+
+    .silck-item {
         position: relative;
         background-size: cover;
         background-position: center;
         height: 48rem;
-        @include media-max($xxl){height: 42rem;}
-        @include media-max($xl) {height: 36rem;}
-        @include media-max($lg) {height: 30rem;}
-        @include media-max($md) {height: 24rem;}
-        @include media-max($sm) {height: 20rem;}
-        @include media-max($xs) {height: 14rem;}
-        @include media-max($xxs){height: 12rem;}
-            
-        figure{
-            mask{
+
+        @include media-max($xxl) {
+            height: 42rem;
+        }
+
+        @include media-max($xl) {
+            height: 36rem;
+        }
+
+        @include media-max($lg) {
+            height: 30rem;
+        }
+
+        @include media-max($md) {
+            height: 24rem;
+        }
+
+        @include media-max($sm) {
+            height: 20rem;
+        }
+
+        @include media-max($xs) {
+            height: 14rem;
+        }
+
+        @include media-max($xxs) {
+            height: 12rem;
+        }
+
+        figure {
+            mask {
                 position: absolute;
                 z-index: 5;
                 top: 0;
@@ -24,66 +46,100 @@
                 background-color: rgba(0, 0, 0, 0.6);
             }
         }
-        .silck-item-heading{
+
+        .silck-item-heading {
             position: absolute;
             z-index: 10;
             top: 50%;
             left: 0;
             right: 0;
-            transform: translate(0 , -50%);
+            transform: translate(0, -50%);
+
             @include media-max($md) {
                 display: none;
             }
-            h2{
+
+            h2 {
                 max-width: 1140px;
                 margin: 0 auto;
                 width: 100%;
                 @include display-2;
                 font-weight: bolder;
+
                 @include media-max($xl) {
                     @include px(3rem)
                 }
+
                 @include media-max($lg) {
                     text-align: center;
                     @include px(1rem)
                 }
-                text-shadow: 0.0625rem 0.0625rem 0.25rem rgba(0,0,0,0.8);
+
+                text-shadow: 0.0625rem 0.0625rem 0.25rem rgba(0, 0, 0, 0.8);
             }
-            h3{
+
+            h3 {
                 max-width: 1140px;
                 margin: 0 auto;
                 width: 100%;
                 @include display-5;
+
                 @include media-max($xl) {
                     @include px(3rem)
                 }
+
                 @include media-max($lg) {
                     text-align: center;
                     @include px(1rem)
                 }
-                text-shadow: 0.0625rem 0.0625rem 0.25rem rgba(0,0,0,0.8);
+
+                text-shadow: 0.0625rem 0.0625rem 0.25rem rgba(0, 0, 0, 0.8);
             }
         }
-        .silck-item-video{
-                margin-left: auto;
-                margin-right: auto;
-            iframe{
+
+        .silck-item-video {
+            margin-left: auto;
+            margin-right: auto;
+
+            iframe {
                 height: 48rem;
-                @include media-max($xxl){height: 42rem;}
-                @include media-max($xl) {height: 36rem;}
-                @include media-max($lg) {height: 30rem;}
-                @include media-max($md) {height: 24rem;}
-                @include media-max($sm) {height: 20rem;}
-                @include media-max($xs) {height: 14rem;}
-                @include media-max($xxs){height: 12rem;}
+
+                @include media-max($xxl) {
+                    height: 42rem;
+                }
+
+                @include media-max($xl) {
+                    height: 36rem;
+                }
+
+                @include media-max($lg) {
+                    height: 30rem;
+                }
+
+                @include media-max($md) {
+                    height: 24rem;
+                }
+
+                @include media-max($sm) {
+                    height: 20rem;
+                }
+
+                @include media-max($xs) {
+                    height: 14rem;
+                }
+
+                @include media-max($xxs) {
+                    height: 12rem;
+                }
             }
         }
     }
 
-    .slick-arrow{
+    .slick-arrow {
         @include media-max($md) {
             display: none !important;
         }
+
         top: 50%;
         background-color: transparent;
         width: 2.875rem;
@@ -91,7 +147,8 @@
         z-index: 900;
         border-radius: 0.25rem;
         box-shadow: none;
-        &::after{
+
+        &::after {
             content: '';
             position: absolute;
             background-color: #fff;
@@ -101,7 +158,8 @@
             height: 0.125rem;
             opacity: 1;
         }
-        &::before{
+
+        &::before {
             content: '';
             position: absolute;
             background-color: #fff;
@@ -112,83 +170,99 @@
             opacity: 1;
         }
     }
-    
-    .slick-prev{
+
+    .slick-prev {
         left: 0;
-        transform: translate(0,-50%);
-        &::after{
-            transform: translate(0.325rem,0.15rem) rotate(65deg);
+        transform: translate(0, -50%);
+
+        &::after {
+            transform: translate(0.325rem, 0.15rem) rotate(65deg);
             right: 50%;
         }
-        &::before{
+
+        &::before {
             transform: translate(0.325rem, -0.25rem) rotate(-65deg);
             right: 50%;
         }
-        
+
     }
-    .slick-next{
+
+    .slick-next {
         right: 0;
-        transform: translate(0,-50%);
-        &::after{
-            transform: translate(-0.3rem,-0.35rem) rotate(65deg);
+        transform: translate(0, -50%);
+
+        &::after {
+            transform: translate(-0.3rem, -0.35rem) rotate(65deg);
             left: 50%;
         }
-        &::before{
-            transform: translate(-0.3rem,0.35rem) rotate(-65deg);
+
+        &::before {
+            transform: translate(-0.3rem, 0.35rem) rotate(-65deg);
             left: 50%;
         }
     }
 
-    .slick-dots{
-        bottom: 1rem;;
-        li{
+    .slick-dots {
+        bottom: 1rem;
+        ;
+
+        li {
             width: 1rem;
             height: 1rem;
             position: relative;
             margin: 0;
 
-            button{
+            button {
                 width: 1rem;
                 height: 1rem;
             }
-            
-            >button:before{
+
+            >button:before {
                 content: '';
                 position: absolute;
                 top: 50%;
                 left: 50%;
-                transform: translate(-50%,-50%);
+                transform: translate(-50%, -50%);
                 width: 0.5rem;
                 height: 0.5rem;
                 border-radius: 50%;
                 background-color: #5d5854;
                 opacity: 1;
             }
-            &:hover{
-                button::before{
+
+            &:hover {
+                button::before {
                     background-color: #fff;
                 }
             }
-            &.slick-active>button::before{
+
+            &.slick-active>button::before {
                 background-color: #fff;
             }
-    
+
         }
     }
 }
-.innovation{
-    &#{-sec2}{
+
+.innovation-sec2_video {}
+
+
+.innovation {
+    &#{-sec2} {
         @include py(3.5rem);
-        &#{-container}{
+
+        &#{-container} {
             @include container;
-            h2{
+
+            h2 {
                 text-align: center;
                 @include display-4;
                 font-weight: bolder;
                 margin-bottom: 0;
                 color: #505050;
             }
-            h3{
+
+            h3 {
                 font-size: 0.9375rem;
                 text-align: center;
                 color: #505050;
@@ -197,72 +271,97 @@
 
             //&#{-video}{}
         }
-        &#{_video}{
-            &#{-formGroup}{
-                form{
-                    display: flex;
-                    position: relative;
-                    align-items: center;
-                    width: 200px;
-                    @include my(1.5rem);
-                    input{
-                        outline: 0;
-                        margin: 0;
-                        line-height: 1.65rem;
-                        height: 1.65rem;
-                        border: 0.125rem solid #a0a1a5;
+
+        &#{_video} {
+            &#{-buttonGroup} {
+                display: flex;
+                button {
+                    background-color: #dad9d9;
+                    height: 2rem;
+                    padding: 0;
+                    margin: 0;
+                    border: 0.0625rem solid #fff;
+                    max-width: 8.333%;
+                    flex: 0 0 8.333%;
+
+                    &.active {
+                        background-color: #92a9c9;
                     }
-                    
-                    button {
-                        background-color: #a0a1a5;
-                        background-image: url(../../images/icon/search.svg);
-                        background-size: 60%;
-                        background-position: center;
-                        background-repeat: no-repeat;
-                        border: 0;
-                        width: 2rem;
-                        height: 2rem;
+
+                    &:hover {
+                        background-color: #92a9c9;
+                    }
+
+                    span {
+                        pointer-events: none;
+                        font-size: 0.9375rem;
+                        color: #fff;
+                        line-height: 2rem;
                     }
                 }
             }
-            &#{-row}{
+
+            &#{-row} {
                 @include row;
                 @include mx(-1rem);
-                &#{-col}{
+
+                &#{-col} {
                     @include col(33%);
+
                     @include media-max($xl) {
                         @include col(50%);
                     }
+
                     @include media-max($md) {
                         @include col(100%);
                     }
+
                     display: flex;
                     flex-wrap: wrap;
                     @include px(0.5rem);
                     @include my(0.5rem);
-                    &#{-figure}{
-                        height: 32rem;
+
+                    &#{-figure} {
+                        //height: 32rem;
                         @include stretched-link;
                         padding: 0.5rem;
                         width: 100%;
-                        
-                        figure{
-                            box-shadow: 0 0.125rem 0.125rem 0.125rem rgba(0,0,0,0.15);
+
+                        figure {
+                            box-shadow: 0 0.125rem 0.125rem 0.125rem rgba(0, 0, 0, 0.15);
                             transition: all 0.2s;
                             display: flex;
                             flex-direction: column;
                             height: 100%;
                             width: 100%;
+
                             .img{
+                                position: relative;
+                                &.video{
+                                    &::before{
+                                        content: '';
+                                        position: absolute;
+                                        top: 0;
+                                        left: 0;
+                                        right: 0;
+                                        bottom: 0;
+                                        background-image: url(../../images/icon/play.png);
+                                        background-repeat: no-repeat;
+                                        background-position: center;
+                                    }
+                                }
+                            }
+                            img {
                                 flex-shrink: 0;
                                 width: 100%;
                                 background-size: cover;
-                                height: 21rem;
+                                //height: 21rem;
                                 margin-bottom: 0.375rem;
                                 background-size: cover;
                                 background-position: center;
                             }
-                            h4{
+
+                            h4 {
                                 text-align: center;
                                 margin-top: 0.75rem;
                                 flex-shrink: 0;
@@ -273,7 +372,8 @@
                                 font-weight: bolder;
                                 @include my(0.375rem);
                             }
-                            p{
+
+                            p {
                                 text-align: left;
                                 flex-grow: 1;
                                 display: flex;
@@ -283,7 +383,7 @@
                                 margin-top: 0.375rem;
                                 margin-bottom: 0.75rem;
 
-                                a{
+                                a {
                                     color: #505050;
                                     font-size: 0.8125rem;
                                     line-height: 1.25rem;
@@ -291,18 +391,22 @@
                                     overflow: hidden;
                                 }
                             }
-                            &:hover{
+
+                            &:hover {
                                 background-color: #c6d5e9;
-                                h4{
+
+                                h4 {
                                     color: #fff;
                                 }
-                                p{
+
+                                p {
                                     color: #fff;
                                 }
-                                a{
+
+                                a {
                                     color: #fff;
                                 }
-                            } 
+                            }
                         }
                     }
                 }
