--- a/src/scss/page/_knowledge.scss
+++ b/src/scss/page/_knowledge.scss
@@ -49,31 +49,55 @@
             //&#{-video}{}
         }
         &#{_video}{
-            &#{-formGroup}{
-                form{
-                    display: flex;
-                    position: relative;
-                    align-items: center;
-                    width: 200px;
-                    @include my(1.5rem);
-                    input{
-                        outline: 0;
-                        margin: 0;
-                        line-height: 1.65rem;
-                        height: 1.65rem;
-                        border: 0.125rem solid #a0a1a5;
+            &#{-buttonGroup}{
+                margin-bottom: 1.5rem;
+
+                button {
+                    background-color: #dad9d9;
+                    border: 0.0625rem solid #dad9d9;
+                    padding: 0.25rem 3rem;
+
+                    span{
+                        font-weight: bolder;
+                        font-size: 0.9375rem;
+                        pointer-events: none;
                     }
+                    i.close{
+                        display: block;
+                        width: 2.5rem;
+                        height: 2.5rem;
+                        position: relative;
+                        cursor: pointer;
+                        pointer-events: none;
                     
-                    button {
-                        background-color: #a0a1a5;
-                        background-image: url(../../images/icon/search.svg);
-                        background-size: 60%;
-                        background-position: center;
-                        background-repeat: no-repeat;
-                        border: 0;
-                        width: 2rem;
-                        height: 2rem;
+                        &::before{
+                            content: '';
+                            position: absolute;
+                            top: 50%;
+                            left: 50%;
+                            width: 1.25rem;
+                            height: 0.125rem;
+                            background-color: #000;
+                            transform: translate(-50%, -50%) rotate(-45deg);
+                            pointer-events: none;
+                        }
+                        &::after{
+                            content: '';
+                            position: absolute;
+                            top: 50%;
+                            left: 50%;
+                            width: 1.25rem;
+                            height: 0.125rem;
+                            background-color: #000;
+                            transform: translate(-50%, -50%) rotate(45deg);
+                            pointer-events: none;
+                        }
                     }
+                    &:hover {
+                        background-color: #92a9c9;
+                        border: 0.0625rem solid #92a9c9;
+                    }
+
                 }
             }
             &#{-row}{
@@ -95,16 +119,38 @@
                         flex-basis: auto;
                         width: 100%;
                         @include px(0.25rem);
-                        height: 30rem;
+                        //height: 30rem;
+                        &.list{
+                            flex-basis: 50%;
+                            max-width: 50%;
+                        }
+                        
 
                         figure{
                             box-shadow: 0 0.125rem 0.125rem 0.125rem rgba(0,0,0,0.15);
                             overflow: hidden;
                             transition: all 0.2s;
+                            margin-bottom: 0.75rem;
 
                             .img{
+                                position: relative;
+                                &.video{
+                                    &::before{
+                                        content: '';
+                                        position: absolute;
+                                        top: 0;
+                                        left: 0;
+                                        right: 0;
+                                        bottom: 0;
+                                        background-image: url(../../images/icon/play.png);
+                                        background-repeat: no-repeat;
+                                        background-position: center;
+                                    }
+                                }
+                            }
+                            img{
                             width: 100%;
-                            height: 20rem;
+                            //height: 20rem;
                             background-size: cover;
                             margin-bottom: 0.25rem;
                             background-size: cover;
@@ -149,3 +195,172 @@
         }
     }
 }
+
+#popup{
+    &.popup-document{
+        position: fixed;
+        top: 0;
+        right: 0;
+        left: 0;
+        bottom: 0;
+        height: 100vh;
+        background-color: rgba(0,0,0,0.6);
+        z-index: 1001;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: all 0.4s ease;
+    }
+    .popup-body{
+        border-radius: 1rem;
+        background-color: #fff;
+        padding: 1rem;
+        margin: 1rem;
+        transform: translate(0,-25%);
+        transition: all 0.4s ease;
+    }
+    
+    .popup-header{
+        @include mx(1rem);
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        border-bottom: solid #A2A2A2 1px;
+    
+        h1,h2,h3,h4,h5,h6{
+            padding: 0.75rem 0;
+            margin: 0; 
+            font-size: 1.125rem;
+            color: #333;
+            font-weight: bolder;
+        }
+        button{
+            margin-left: 3rem;
+            border: 0;
+            background-color: transparent;
+        }
+    }
+    .popup-main{
+        overflow: auto;
+        padding: 0 15px;
+        max-height: 80vh;
+        max-width: 60vh;
+        display: flex;
+        flex-wrap: wrap;
+        button {
+            background-color: #dad9d9;
+            border: 0.0625rem solid #dad9d9;
+            padding: 0.25rem 1.5rem;
+            margin: 0.5rem 0.25rem;
+
+            span{
+                font-weight: bolder;
+                font-size: 0.9375rem;
+                pointer-events: none;
+            }
+            i.close{
+                display: block;
+                width: 2.5rem;
+                height: 2.5rem;
+                position: relative;
+                cursor: pointer;
+                pointer-events: none;
+            
+                &::before{
+                    content: '';
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    width: 1.25rem;
+                    height: 0.125rem;
+                    background-color: #000;
+                    transform: translate(-50%, -50%) rotate(-45deg);
+                    pointer-events: none;
+                }
+                &::after{
+                    content: '';
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    width: 1.25rem;
+                    height: 0.125rem;
+                    background-color: #000;
+                    transform: translate(-50%, -50%) rotate(45deg);
+                    pointer-events: none;
+                }
+            }
+            &:hover {
+                background-color: #92a9c9;
+                border: 0.0625rem solid #92a9c9;
+            }
+
+        }
+    }
+    .popup-footer{
+        @include mx(1rem);
+        display: flex;
+        justify-content: flex-end;
+        //border-top: solid #A2A2A2 1px;
+    
+        button{
+            margin: 15px 0;
+            border-radius: 2rem;
+            min-width: 4.5rem;
+            border: 2px solid transparent;
+            font-size: 0.875rem;
+            line-height: 1.125rem;
+            height: 1.125rem;
+            padding: 0 1.5rem;
+        }
+    
+    
+    }
+    &.popup-hide{
+        opacity: 0;
+        pointer-events: none;
+        > div{
+            transform: translate(0,-50%);
+            
+        }
+        
+    }
+    &.popup-show{
+        opacity: 1;
+        pointer-events: auto;
+        > div{
+            transform: translate(0,0);
+        }
+    }
+    i.close{
+        display: block;
+        width: 2.5rem;
+        height: 2.5rem;
+        position: relative;
+        cursor: pointer;
+        pointer-events: none;
+    
+        &::before{
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 1.25rem;
+            height: 0.125rem;
+            background-color: #000;
+            transform: translate(-50%, -50%) rotate(-45deg);
+            pointer-events: none;
+        }
+        &::after{
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 1.25rem;
+            height: 0.125rem;
+            background-color: #000;
+            transform: translate(-50%, -50%) rotate(45deg);
+            pointer-events: none;
+        }
+    }
+}
+
